--- a/first.html
+++ b/first.html
@@ -26,6 +26,38 @@
       dolores! Illum voluptas ipsam consequatur veritatis ab natus, beatae officiis dicta. At laborum cupiditate odit fuga.
     </p>
     <p><a href="www.facebook.com">My Name is abdus salam.</a> whats your name?</p>
-    
+    <img
+      src="https://scontent.fdac99-1.fna.fbcdn.net/v/t39.30808-6/304994357_2064418510416027_3264071313469303902_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=e3f864&_nc_ohc=snpQRf3YdrsAX93JYnU&_nc_ht=scontent.fdac99-1.fna&oh=00_AT-PHnDUViRBVOdJRnxLE9kZsfZubM6ZuMiPypbBKxREUw&oe=632A0289"
+      alt="computer"
+    />
+    <li>polow</li>
+    <li>kala vona</li>
+    <li>kabab</li>
+
+<ul>
+    <li>alu</li>
+    <li>bagun</li>
+    <li>kochue</li>
+</ul>
+
+
+<ol>
+    <li>alu</li>
+    <li>bagun</li>
+    <li>kochue</li>
+</ol>
+
+
+<form action="">
+    <input type="text">
+<input type="password" name="" id="">
+<input type="email" name="" id="">
+<input type="checkbox" name="" id="">
+<input type="radio" name="" id="">
+<input type="file" name="" id="">
+<button>submit</button> <input type="text" name="" id="">
+</form>
+<small>small text tag tag</small>
+
   </body>
 </html>
